--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -4,11 +4,15 @@
         <item>raw</item>
         <item>basic</item>
         <item>rotation_vector</item>
+        <item>sync_fusion_simple</item>
+        <item>sync_fusion_enhance</item>
     </string-array>
     <string-array name="sensor_type_titles">
         <item>Basiswerte (Lage-, Gyroskop-, Magnetsensor)</item>
         <item>Lage- &amp; Magnetsensor</item>
         <item>Systemeigener Rotationsvektor</item>
+        <item>Einfacher SF-Sensor</item>
+        <item>Verbesserter SF-Sensor</item>
     </string-array>
     <string-array name="sensor_sample_rate_keys">
         <item>3</item>
