Update app icon.

--- a/app/src/main/res/drawable/ic_icon_monochrome.xml
+++ b/app/src/main/res/drawable/ic_icon_monochrome.xml
@@ -3,28 +3,31 @@
     android:height="100dp"
     android:viewportWidth="100"
     android:viewportHeight="100">
-    <group>
-        <clip-path android:pathData="M-38.03,-0.75L142.25,-0.75L142.25,100.66L-38.03,100.66Z" />
-        <path
-            android:fillColor="#000000"
-            android:fillType="nonZero"
-            android:pathData="M16.17,31.83C14.3,31.83 12.8,33.34 12.8,35.2L12.8,65.99C12.8,67.85 14.3,69.35 16.17,69.35L41.19,69.35C44.32,69.35 47.46,52.6 50.6,52.6C53.78,52.6 56.97,69.35 60.16,69.35L85.06,69.35C86.93,69.35 88.43,67.85 88.43,65.99L88.43,35.2C88.43,33.34 86.93,31.83 85.06,31.83L16.17,31.83zM15.16,32.77L17.89,32.77C18.48,32.77 18.97,33.26 18.97,33.85C18.97,34.44 18.48,34.93 17.89,34.93L15.16,34.93C14.57,34.93 14.08,34.44 14.08,33.85C14.08,33.26 14.57,32.77 15.16,32.77zM21.76,32.77L32.8,32.77C33.39,32.77 33.88,33.26 33.88,33.85C33.88,34.44 33.39,34.93 32.8,34.93L21.76,34.93C21.16,34.93 20.68,34.44 20.68,33.85C20.68,33.26 21.16,32.77 21.76,32.77zM26.83,40.45C32.07,40.45 36.32,44.7 36.32,49.95C36.32,55.19 32.07,59.44 26.83,59.44C21.58,59.44 17.33,55.19 17.33,49.95C17.33,44.7 21.58,40.45 26.83,40.45zM74.34,40.92C79.58,40.92 83.83,45.17 83.83,50.41C83.83,55.66 79.58,59.91 74.34,59.91C69.09,59.91 64.84,55.66 64.84,50.41C64.84,45.17 69.09,40.92 74.34,40.92z"
-            android:strokeColor="#00000000" />
-    </group>
-    <group>
-        <clip-path android:pathData="M-38.03,-0.75L142.25,-0.75L142.25,100.66L-38.03,100.66Z" />
-        <path
-            android:fillColor="#000000"
-            android:fillType="nonZero"
-            android:pathData="M9.06,58.14L12.86,58.14L12.86,44.15L9.06,44.15c-0.62,-0 -1.13,0.51 -1.13,1.13L7.93,57.02C7.93,57.64 8.44,58.14 9.06,58.14"
-            android:strokeColor="#00000000" />
-    </group>
-    <group>
-        <clip-path android:pathData="M-38.03,-0.75L142.25,-0.75L142.25,100.66L-38.03,100.66Z" />
-        <path
-            android:fillColor="#000000"
-            android:fillType="nonZero"
-            android:pathData="m88.17,58.65l3.8,-0c0.62,-0 1.13,-0.51 1.13,-1.13l0,-11.74c0,-0.62 -0.51,-1.13 -1.13,-1.13L88.17,44.65Z"
-            android:strokeColor="#00000000" />
-    </group>
+  <group>
+    <clip-path
+        android:pathData="M-38.03,-0.75L142.25,-0.75L142.25,100.66L-38.03,100.66Z"/>
+    <path
+        android:pathData="M16.17,31.83C14.3,31.83 12.8,33.34 12.8,35.2L12.8,65.99C12.8,67.85 14.3,69.35 16.17,69.35L41.19,69.35C44.32,69.35 47.46,52.6 50.6,52.6C53.78,52.6 56.97,69.35 60.16,69.35L85.06,69.35C86.93,69.35 88.43,67.85 88.43,65.99L88.43,35.2C88.43,33.34 86.93,31.83 85.06,31.83L16.17,31.83zM26.83,40.45C32.07,40.45 36.32,44.7 36.32,49.95C36.32,55.19 32.07,59.44 26.83,59.44C21.58,59.44 17.33,55.19 17.33,49.95C17.33,44.7 21.58,40.45 26.83,40.45zM74.34,40.92C79.58,40.92 83.83,45.17 83.83,50.41C83.83,55.66 79.58,59.91 74.34,59.91C69.09,59.91 64.84,55.66 64.84,50.41C64.84,45.17 69.09,40.92 74.34,40.92z"
+        android:fillColor="#000000"
+        android:strokeColor="#00000000"
+        android:fillType="nonZero"/>
+  </group>
+  <group>
+    <clip-path
+        android:pathData="M-38.03,-0.75L142.25,-0.75L142.25,100.66L-38.03,100.66Z"/>
+    <path
+        android:pathData="M9.06,58.14L12.86,58.14L12.86,44.15L9.06,44.15c-0.62,-0 -1.13,0.51 -1.13,1.13L7.93,57.02C7.93,57.64 8.44,58.14 9.06,58.14"
+        android:fillColor="#000000"
+        android:strokeColor="#00000000"
+        android:fillType="nonZero"/>
+  </group>
+  <group>
+    <clip-path
+        android:pathData="M-38.03,-0.75L142.25,-0.75L142.25,100.66L-38.03,100.66Z"/>
+    <path
+        android:pathData="m88.17,58.65l3.8,-0c0.62,-0 1.13,-0.51 1.13,-1.13l0,-11.74c0,-0.62 -0.51,-1.13 -1.13,-1.13L88.17,44.65Z"
+        android:fillColor="#000000"
+        android:strokeColor="#00000000"
+        android:fillType="nonZero"/>
+  </group>
 </vector>
